--- a/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
+++ b/PostSafety/PostSafety/Base.lproj/LaunchScreen.storyboard
@@ -7,7 +7,6 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -20,18 +19,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="480x480.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="3Z0-i7-foO">
-                                <rect key="frame" x="63" y="209" width="250" height="250"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="rGg-mY-YTr">
+                                <rect key="frame" x="24" y="170" width="327" height="327"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" secondItem="3Z0-i7-foO" secondAttribute="height" multiplier="1:1" id="uG1-Jm-U4c"/>
+                                    <constraint firstAttribute="width" secondItem="rGg-mY-YTr" secondAttribute="height" id="Ukw-pQ-E3z"/>
                                 </constraints>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="3Z0-i7-foO" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Qwe-da-sUi"/>
-                            <constraint firstItem="3Z0-i7-foO" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" multiplier="2/3" id="Xzk-VF-4Y1"/>
-                            <constraint firstItem="3Z0-i7-foO" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="roX-gJ-IgO"/>
+                            <constraint firstItem="rGg-mY-YTr" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="AuT-TA-T0Y"/>
+                            <constraint firstItem="rGg-mY-YTr" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="24" id="Vmw-XL-eZB"/>
+                            <constraint firstItem="rGg-mY-YTr" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="bT8-Bt-sZe"/>
+                            <constraint firstAttribute="trailing" secondItem="rGg-mY-YTr" secondAttribute="trailing" constant="24" id="no8-e7-r0t"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -42,6 +43,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="480x480.jpg" width="480" height="480"/>
+        <image name="logo" width="512" height="512"/>
     </resources>
 </document>
