--- a/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
+++ b/PostSafety/PostSafety/Storyboards/Dashboard.storyboard
@@ -1834,7 +1834,7 @@
                                         </constraints>
                                         <state key="normal" image="back"/>
                                         <connections>
-                                            <action selector="backButtonTouched:" destination="dbW-6G-5vs" eventType="touchUpInside" id="dJh-5f-8nC"/>
+                                            <action selector="backButtonTouched:" destination="dbW-6G-5vs" eventType="touchUpInside" id="Moi-OL-lBe"/>
                                         </connections>
                                     </button>
                                 </subviews>
@@ -2550,7 +2550,7 @@
         <!--No Connection View Controller-->
         <scene sceneID="CiB-tf-Y6M">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="3Sg-Zf-C5J" customClass="PSNoConnectionViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PSNoConnectionViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="3Sg-Zf-C5J" customClass="PSNoConnectionViewController" customModule="PostSafety" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="TdW-cc-8Ye">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
